--- a/app/src/main/res/layout/menu_list.xml
+++ b/app/src/main/res/layout/menu_list.xml
@@ -16,12 +16,13 @@
         android:text="Menu TextView"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:drawableStartCompat="@drawable/img" />
+        app:drawableStartCompat="@drawable/img"/>
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView" />
+
 
 </LinearLayout>
