--- a/app/src/main/res/layout/nurigwan.xml
+++ b/app/src/main/res/layout/nurigwan.xml
@@ -35,34 +35,38 @@
 
             <Button
                 android:id="@+id/button1"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/button_background1"
                 android:text="비틀\n쥬스" />
 
             <Button
                 android:id="@+id/button2"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/button_background3"
                 android:text="퀴즈\n노스" />
 
             <Button
                 android:id="@+id/button3"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginTop="10dp"
+                android:background="@drawable/button_background2"
                 android:text="가은" />
 
             <Button
                 android:id="@+id/button4"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginTop="10dp"
+                android:background="@drawable/button_background2"
                 android:text="츄밥" />
         </LinearLayout>
 
@@ -73,50 +77,59 @@
 
             <Button
                 android:id="@+id/button5"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginTop="-11dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/button_background3"
                 android:text="우리\n은행" />
 
             <Button
                 android:id="@+id/button6"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginTop="-11dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/button_background3"
                 android:text="누리\n스토어" />
 
             <Button
                 android:id="@+id/button7"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/button_background3"
                 android:text="안경점" />
 
             <Button
                 android:id="@+id/button8"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
-                android:layout_marginTop="-8dp"
+                android:layout_marginTop="-1dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/button_background3"
                 android:text="SWEET U"
                 android:textSize="13sp" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="360dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
+    <LinearLayout
+        android:layout_width="339dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="-1dp"
+        android:layout_gravity="center">
 
-            <Button
-                android:id="@+id/button9"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
-                android:layout_gravity="left"
-                android:layout_marginHorizontal="5.5dp"
-                android:text="우체국" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="75dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="5dp"
+            android:background="@drawable/button_background3"
+            android:text="우체국" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/text3"
@@ -134,48 +147,63 @@
 
             <Button
                 android:id="@+id/button10"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
+                android:enabled="false"
+                android:clickable="false"
+                android:layout_marginTop="-2dp"
+                android:background="@drawable/button_background4"
                 android:text="월남\n선생" />
 
             <Button
                 android:id="@+id/button11"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="9dp"
+                android:layout_marginBottom="1dp"
+                android:enabled="false"
+                android:clickable="false"
+                android:background="@drawable/button_background4"
                 android:text="아딸" />
 
             <Button
                 android:id="@+id/button12"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginTop="-2dp"
+                android:background="@drawable/button_background2"
                 android:text="만권\n화밥" />
 
             <Button
                 android:id="@+id/button13"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
+                android:layout_width="75dp"
+                android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
-                android:text="최고당돈가스" />
+                android:layout_marginTop="-2dp"
+                android:background="@drawable/button_background2"
+                android:text="최고당\n돈가스" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="360dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
+    <LinearLayout
+        android:layout_width="340dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="1dp">
 
-            <Button
-                android:id="@+id/button14"
-                android:layout_width="80dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="5.5dp"
-                android:text="에땅" />
-        </LinearLayout>
-        <LinearLayout
+        <Button
+            android:id="@+id/button14"
+            android:layout_width="75dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="5.5dp"
+            android:layout_marginTop="7dp"
+            android:background="@drawable/button_background3"
+            android:text="에땅" />
+    </LinearLayout>
+
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
