--- a/app/src/main/res/layout/nurigwan.xml
+++ b/app/src/main/res/layout/nurigwan.xml
@@ -188,7 +188,7 @@
         </LinearLayout>
 
     <LinearLayout
-        android:layout_width="340dp"
+        android:layout_width="339dp"
         android:layout_height="70dp"
         android:layout_gravity="center"
         android:layout_marginTop="1dp">
@@ -197,7 +197,7 @@
             android:id="@+id/button14"
             android:layout_width="75dp"
             android:layout_height="60dp"
-            android:layout_marginLeft="5.5dp"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="7dp"
             android:background="@drawable/button_background3"
             android:text="에땅" />
@@ -207,4 +207,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginRight="10dp"
+        app:srcCompat="@android:drawable/ic_menu_manage" />
 </LinearLayout>
