--- a/app/src/main/res/layout/nurigwan.xml
+++ b/app/src/main/res/layout/nurigwan.xml
@@ -159,7 +159,9 @@
                     android:layout_marginHorizontal="5dp"
                     android:layout_marginTop="-11dp"
                     android:layout_marginBottom="20dp"
-                    android:background="@drawable/button_background3"
+                    android:enabled="false"
+                    android:clickable="false"
+                    android:background="@drawable/button_background4"
                     android:text="월남\n선생" />
 
                 <Button
@@ -168,7 +170,9 @@
                     android:layout_height="60dp"
                     android:layout_marginHorizontal="5dp"
                     android:layout_marginBottom="10dp"
-                    android:background="@drawable/button_background3"
+                    android:enabled="false"
+                    android:clickable="false"
+                    android:background="@drawable/button_background4"
                     android:text="아딸" />
 
                 <Button
