학생누리관 완료

--- a/app/src/main/res/menu/popup_menu_nuristore.xml
+++ b/app/src/main/res/menu/popup_menu_nuristore.xml
@@ -2,12 +2,12 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/select1"
+        android:id="@+id/select1_nuristore"
         android:title="혼잡" />
     <item
-        android:id="@+id/select2"
+        android:id="@+id/select2_nuristore"
         android:title="보통" />
     <item
-        android:id="@+id/select3"
+        android:id="@+id/select3_nuristore"
         android:title="여유" />
 </menu>
