이전 버전 복구

--- a/app/src/main/res/layout/activity_insagwan.xml
+++ b/app/src/main/res/layout/activity_insagwan.xml
@@ -29,7 +29,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_gravity="center">
 
         <Button
@@ -38,7 +38,7 @@
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
             android:background="@drawable/button_background3"
-            android:text="GS\n25"/>
+            android:text="GS\n25" />
 
     </LinearLayout>
 
