--- a/app/src/main/res/drawable/button_background2.xml
+++ b/app/src/main/res/drawable/button_background2.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle" >
-    <solid android:color="#FFFF00" />
+    <solid android:color="#F8E392" />
     <corners
         android:bottomLeftRadius="12dp"
         android:bottomRightRadius="12dp"
