--- a/app/src/main/res/drawable/button_background3.xml
+++ b/app/src/main/res/drawable/button_background3.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle" >
-    <solid android:color="#00FF00"/>
+    <solid android:color="#99CC99"/>
     <corners
         android:bottomLeftRadius="12dp"
         android:bottomRightRadius="12dp"
