--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorTable">#efefef</color>
 
     // congestion 혼잡도 빨강(1), 노랑(2), 초록(3) 각 혼잡, 보통, 여유
     <color name="Congestion_red">#EA7C7D</color>
