맵 intent 연결과 컬러 차트 수정 및 하이라이트 색 변경

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="main_red_dark">#792222</color>
     <color name="main_red_medium">#C75b5C</color>
     <color name="main_red_bright">#FAA5A6</color>
+    <color name="main_red_highlight">#FFC6C6</color>
 </resources>
