--- a/app/src/main/res/layout/activity_nurigwan2.xml
+++ b/app/src/main/res/layout/activity_nurigwan2.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LibraryCafeActivity">
+    tools:context=".NurigwanActivity">
 
     <TextView
-        android:id="@+id/lib_text1"
+        android:id="@+id/nuri2_text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
-        android:text="도서관"
+        android:text="학생누리관"
         android:textColor="#0000FF"
         android:textSize="34sp"></TextView>
 
@@ -25,40 +25,32 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/lib_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
-            android:gravity="center"
-            android:text="2F"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/lib_text3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
-            android:gravity="center"
-            android:text="3F"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/lib_text4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
-            android:gravity="center"
-            android:text="4F"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/lib_text5"
+            android:id="@+id/nuri2_text2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
             android:gravity="center"
             android:text="5F"
             android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/nuri2_text3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
+            android:gravity="center"
+            android:text="6F"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/nuri2_text4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
+            android:gravity="center"
+            android:text="7F"
+            android:textSize="24sp" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -68,108 +60,67 @@
         android:layout_marginTop="10dp">
 
         <Button
-            android:id="@+id/lib_button1"
+            android:id="@+id/nuri2_button1"
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="6dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/button_background3"
-            android:text="2층\n주제자료실" />
+            android:text="5층\n로비" />
 
         <Button
-            android:id="@+id/lib_button2"
+            android:id="@+id/nuri2_button2"
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="6dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/button_background3"
-            android:text="3층\n주제자료실" />
+            android:text="6층\n로비" />
 
         <Button
-            android:id="@+id/lib_button3"
+            android:id="@+id/nuri2_button3"
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="6dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/button_background3"
-            android:text="4층\n주제자료실" />
-
-        <Button
-            android:id="@+id/lib_button4"
-            android:layout_width="75dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="6dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/button_background3"
-            android:text="5층\n슈니나래" />
+            android:text="7층\n로비" />
 
     </LinearLayout>
 
+
     <TextView
-        android:id="@+id/lib_text6"
+        android:id="@+id/nuri2_text5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:text="1F"
-        android:textSize="24sp"></TextView>
+        android:text="2F"
+        android:textSize="24sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp">
+        android:layout_gravity="center">
 
         <Button
-            android:id="@+id/lib_button5"
+            android:id="@+id/nuri2_button4"
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/button_background3"
-            android:text="소셜러닝\n라운지" />
+            android:text="인터넷\n카페"/>
 
         <Button
-            android:id="@+id/lib_button6"
+            android:id="@+id/nuri2_button5"
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/button_background3"
-            android:text="멀티미디어\n라운지" />
-
-        <Button
-            android:id="@+id/lib_button7"
-            android:layout_width="75dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="5dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/button_background3"
-            android:text="커뮤니티\n라운지" />
-
-        <Button
-            android:id="@+id/lib_button8"
-            android:layout_width="75dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="5dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/button_background3"
-            android:text="슈니\n마루" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="339dp"
-        android:layout_height="64dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="-1dp">
-
-        <Button
-            android:id="@+id/lib_button9"
-            android:layout_width="75dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="5dp"
-            android:background="@drawable/button_background3"
-            android:text="멀티\n플렉스존" />
+            android:text="음악\n감상실" />
     </LinearLayout>
 
 </LinearLayout>
