--- a/app/src/main/res/layout/activity_kidok.xml
+++ b/app/src/main/res/layout/activity_kidok.xml
@@ -5,67 +5,87 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AuditoriumActivity">
+    tools:context=".InsagwanActivity">
 
     <TextView
-        android:id="@+id/aud_text1"
+        android:id="@+id/kidok_text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
-        android:text="대강당"
+        android:text="기독교교육관"
         android:textColor="#0000FF"
         android:textSize="34sp"></TextView>
 
     <TextView
-        android:id="@+id/aud_text2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:gravity="center"
-        android:text="2F"
-        android:textSize="24sp"></TextView>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp">
-
-        <Button
-            android:id="@+id/aud_button1"
-            android:layout_width="75dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="5dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/button_background3"
-            android:text="교내서점" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/aud_text3"
+        android:id="@+id/kidok_text2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:text="1F"
+        android:text="3F"
+        android:textSize="24sp" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:layout_gravity="center">
+
+        <Button
+            android:id="@+id/kidok_button1"
+            android:layout_width="75dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="5dp"
+            android:background="@drawable/button_background3"
+            android:text="3층\n로비" />
+
+    </LinearLayout>
+    <TextView
+        android:id="@+id/kidok_text3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="2F"
         android:textSize="24sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_gravity="center">
 
         <Button
-            android:id="@+id/aud_button2"
+            android:id="@+id/kidok_button2"
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
-            android:layout_marginBottom="10dp"
             android:background="@drawable/button_background3"
-            android:text="팬도로시" />
+            android:text="2층\n로비" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/kidok_text4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="1F"
+        android:textSize="24sp" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:layout_gravity="center">
+
+        <Button
+            android:id="@+id/kidok_button3"
+            android:layout_width="75dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="5dp"
+            android:background="@drawable/button_background3"
+            android:text="커뮤니티\n라운지" />
 
     </LinearLayout>
 
