--- a/app/src/main/res/layout/activity_science1.xml
+++ b/app/src/main/res/layout/activity_science1.xml
@@ -5,27 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LibraryCafeActivity">
+    tools:context=".JoyegwanActivity">
 
     <TextView
-        android:id="@+id/libcafe_text1"
+        android:id="@+id/sci1_text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
-        android:text="도서관"
+        android:text="제1과학관"
         android:textColor="#0000FF"
         android:textSize="34sp"></TextView>
 
     <TextView
-        android:id="@+id/libcafe_text2"
+        android:id="@+id/sci1_text2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="1F"
-        android:textSize="24sp"/>
+        android:textSize="24sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -33,12 +33,12 @@
         android:layout_gravity="center">
 
         <Button
-            android:id="@+id/libcafe_button1"
+            android:id="@+id/sci1_button1"
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
             android:background="@drawable/button_background3"
-            android:text="북카페\n그라찌에" />
+            android:text="1층\n로비" />
 
     </LinearLayout>
 
